fix item-link align

--- a/custom.css
+++ b/custom.css
@@ -3197,11 +3197,11 @@ span.save_widget span.filename:hover {
 
 .item_icon, .item_link {
 	position: relative !important;
-	top: -5px !important;
+	top: -4px !important;
 }
 
 .item_buttons .running-indicator {
-	padding-top: 0px !important;
+	padding-top: 7px !important;
 }
 
 #logout {
